@@ -14,46 +14,46 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
 @RequiredArgsConstructor
-
 public class ApplicationConfig {
-    private  final UserRepository userRepository;
+    private final UserRepository userRepository;
 
     @Bean
     public UserDetailsService userDetailsService() {
-        return username ->
-                userRepository.findByUsername(username)
+        return email ->
+                userRepository.findByEmail(email)
                         .map(user ->
                                 new org.springframework.security
                                         .core.userdetails.User(
-                                        user.getUsername(),
+                                        user.getEmail(), // Use email instead of username
                                         user.getPassword(),
                                         List.of(new SimpleGrantedAuthority
-                                                ("ROLE_"+user.getRole().name()))
+                                                ("ROLE_" + user.getRole().name()))
                                 )).orElseThrow(
-                                ()->new UsernameNotFoundException
+                                () -> new UsernameNotFoundException
                                         ("User not found")
                         );
     }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return  new BCryptPasswordEncoder();
     }
 }
